--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      
            <div>
              <video controls="" loop autoplay width="300" poster="https://i.pinimg.com/originals/97/95/69/979569a2dedd37573974ceebc05b4a4e.png" >
-               <source src="https://detailed-video-29b30.web.app/detailed%20video.mp4"  type="video/mp4" >
+               <source src="video.mp4"  type="video/mp4" >
             </video>
            </div>
      
