--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <form class="content" action="https://api.web3forms.com/submit" method="POST">
 
           
-<input type="hidden" name="access_key" value="
-f2c7d8c8-f336-4890-92e2-96031ddb910a">
+<input type="hidden" name="access_key" value="f2c7d8c8-f336-4890-92e2-96031ddb910a">
 
 
             <div>
