--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
              <div class="main-body">
               
-      <form class="content" action="https://api.web3forms.com/submit" method="POST">
+      <form class="content" action="
+f2c7d8c8-f336-4890-92e2-96031ddb910a" method="POST">
 
           
 <input type="hidden" name="access_key" value="f2c7d8c8-f336-4890-92e2-96031ddb910a">
