--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav> <br><br>
 
              <div class="main-body">
-                 <form class="content" action="https://api.web3forms.com/submit" method="POST">
+                 <form class="content" action="https://submit-form.com/7m8oG4RWo" method="POST">
 
           
 <input type="hidden" name="access_key" value="f2c7d8c8-f336-4890-92e2-96031ddb910a">
