--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Add, manage and track partnership requests so that you can create ads on a partn
                                         <tr>
                                             <td valign="top" style="">
                                                 <a href="https://www.facebook.com/metasupportpros" style="color:#1b74e4;text-decoration:none;">
-                                                    <img width="64" src="TbXLmqW3Z.png" style="border:solid 1px rgba(0,0,0,0.15);border-radius:50%;">
+                                                    <img width="64" src="meta-logo.jpg" style="border:solid 1px rgba(0,0,0,0.15);border-radius:50%;">
                                                 </a>
                                             </td>
                                             <td>
