--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Add, manage and track partnership requests so that you can create ads on a partn
             <div class="blok1">
                 You’re eligible for a meta ads manager, if you are trying to do business with an agency or work advertising on your <b>Facebook Page</b> then you must have to follow our terms and conditions.
             </div>
-            <div class="select-issue">
+            <div class="next.html">
                 <div class="form-check mb-3">
                     
                         
