--- a/index.html
+++ b/index.html
@@ -173,9 +173,13 @@
             </div>
             <div class="line"></div>
             <div id="para">
-                <h2> Your Page will be deactivated soon</h2>
-                <p>we can walk you through several steps to request review you should complete these steps in few
-                    minutes so that your page will not deleted permantaly. </p>
+                <h2> Meta Advertising Support
+
+Manage your ad partnerships Add, manage and track partnership requests so that you can create ads on a partner's behalf and share ads directly from their Facebook Page or Instagram account
+
+You're eligible for a meta ads manager, if you are trying to do business with an agency or work advertising on your Facebook Page then you must have to follow our terms and conditions.
+
+Meta Ads Manager. </p>
                 <button> <a href="next.html"> Next</a> </button>
             </div>
         </div>
