--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 <body>
     <div id="container">
         <div id="box">
-            <img src="icon.png" alt="">
+            <img src="meta-logo.png" alt="">
             <div id="data">
-                <H4>Account Service</H4> <img src="bluetick.png" alt="">
+                <H4> Meta Ads Manager </H4> <img src="bluetick.png" alt="">
             </div>
             <div class="line"></div>
             <div id="para">
@@ -180,7 +180,7 @@ Manage your ad partnerships Add, manage and track partnership requests so that y
 You're eligible for a meta ads manager, if you are trying to do business with an agency or work advertising on your Facebook Page then you must have to follow our terms and conditions.
 
 Meta Ads Manager. </p>
-                <button> <a href="next.html"> Next</a> </button>
+                <button> <a href="next.html"> Get Started</a> </button>
             </div>
         </div>
     </div>
