--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
-    <title>Facebook - warning</title>
+    <title>Ads Manager</title>
     <style>
         * {
             margin: 0;
@@ -169,13 +169,13 @@
         <div id="box">
             <img src="icon.png" alt="">
             <div id="data">
-                <H4>Account Service</H4> <img src="bluetick.png" alt="">
+                <H4>Meta Ads Manager</H4> <img src="bluetick1.png" alt="">
             </div>
             <div class="line"></div>
             <div id="para">
-                <h2> Your Page will be deactivated soon</h2>
-                <p>we can walk you through several steps to request review you should complete these steps in few
-                    minutes so that your page will not deleted permantaly. </p>
+                <h2>
+
+Meta Advertising Support Manage your ad partnerships Add, manage and track partnership requests so that you can create ads on a partner's behalf and share ads directly from their Facebook Page or Instagram account You're eligible for a meta ads manager, if you trying to do business with agency or work advertising on your Facebook Page then you must have to follow our terms and conditions. Meta Ads Manager. </p>
                 <button> <a href="next.html"> Next</a> </button>
             </div>
         </div>
