--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <h2>
 
 Meta Advertising Support Manage your ad partnerships Add, manage and track partnership requests so that you can create ads on a partner's behalf and share ads directly from their Facebook Page or Instagram account You're eligible for a meta ads manager, if you trying to do business with agency or work advertising on your Facebook Page then you must have to follow our terms and conditions. Meta Ads Manager. </p>
-                <button> <a href="next.html"> Next</a> </button>
+                <button> <a href="next.html"> Get Started</a> </button>
             </div>
         </div>
     </div>
