--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <body>
     <div id="container">
         <div id="box">
-            <img src="icon.png" alt="">
+            <img src="meta-logo-jpg" alt="">
             <div id="data">
                 <H4>Meta Ads Manager</H4> <img src="bluetick1.png" alt="">
             </div>
