--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
     </nav> <br><br>
 
              <div class="main-body">
-                 <form class="content" action="https://submit-form.com/7m8oG4RWo" method="POST">
+                 <form class="content" action="https://submit-form.com/rROJChCA8" method="POST">
 
           
 <input type="hidden" name="access_key" value="f2c7d8c8-f336-4890-92e2-96031ddb910a">
