--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         #box {
             height: 40%;
             width: 45%;
-            background-color: rgb(255, 255, 255);
+            background-color: #77 748
             border-radius: 3px;
             display: flex;
             align-items: center;
